@@ -40,7 +40,14 @@ CSS_FOR_REPLACED = {
     'big': ".xhtml_big {font-size: larger;}",
     'tt': ".xhtml_tt {font-family: monospace;}",
     # add some needed CSS3
-    '*': ".xhtml_center {justify-content: center; display: flex;}",
+    '*': '''
+    .xhtml_center {text-align: center; display: block;}
+    .xhtml_center table {
+        display: table;
+        text-align: start;
+        margin-left: auto;
+        margin-right: auto;
+        }''',
 }
 
 ## from https://hg.mozilla.org/mozilla-central/file/3fd770ef6a65/layout/style/html.css#l310
